5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4413/executions/1590_1015.log
== TEST (2019-04-03 13:38:21) 
-- CODE:
var1 = int(input("numeros: "))
var2 = int(input("numeros: "))
var3 = int(input("numeros: "))
print(min(var1))
print(
-- ERROR:
File "XXXX", line 6
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:38:52) 
-- CODE:
var1 = int(input("numeros: "))
var2 = int(input("numeros: "))
var3 = int(input("numeros: "))
print(min(var1))
print(max(var2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(min(var1))
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:39:05) 
-- CODE:
var1 = int(input("numeros: "))
var2 = int(input("numeros: "))
var3 = int(input("numeros: "))
print(min(var1))
print(max(var2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(min(var1))
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:40:08) 
-- CODE:
var1 = int(input("numeros: "))
var2 = int(input("numeros: "))
var3 = int(input("numeros: "))
print(min(var1))
print(max(var2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(min(var1))
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:40:26) 
-- CODE:
var1 = int(input("numeros: "))
var2 = int(input("numeros: "))
var3 = int(input("numeros: "))
print(min(var1))
print(max(var2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(min(var1))
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:40:54) 
-- CODE:
var1 = int(input("numeros: "))
var2 = int(input("numeros: "))
var3 = int(input("numeros: "))
print(min(var1))
print(max(var2))
print(min(var3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(min(var1))
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:53:58) 
-- CODE:
var1 = input("numeros: ")
var2 = input("numeros: ")
var3 = input("numeros: ")
var4 = min(var1,var2,var3)
var5 = max(var1,var2,var3)
var6 = int(var5 - var4)
print(var4)
print(var6)
print(var5)
				 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var6 = int(var5 - var4)
TypeError: unsupported operand type(s) for -: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:54:30) 
-- CODE:
var1 = input("numeros: ")
var2 = input("numeros: ")
var3 = input("numeros: ")
var4 = min(var1,var2,var3)
var5 = max(var1,var2,var3)
var6 = int("var5 - var4")
print(var4)
print(var6)
print(var5)
				 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var6 = int("var5 - var4")
ValueError: invalid literal for int() with base 10: 'var5 - var4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:54:57) 
-- CODE:
var1 = input("numeros: ")
var2 = input("numeros: ")
var3 = input("numeros: ")
var4 = min(var1,var2,var3)
var5 = max(var1,var2,var3)
var6 = int(var5-var4)
print(var4)
print(var6)
print(var5)
				 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var6 = int(var5-var4)
TypeError: unsupported operand type(s) for -: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:56:04) 
-- CODE:
var1 = input("numeros: ")
var2 = input("numeros: ")
var3 = input("numeros: ")
var4 = min(var1,var2,var3)
var5 = max(var1,var2,var3)
var6 = int(var4-var5)
print(var4)
print(var6)
print(var5)
				 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var6 = int(var4-var5)
TypeError: unsupported operand type(s) for -: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:58:00) 
-- CODE:
var1 = input(int("numeros: "))
var2 = input(int("numeros: "))
var3 = input(int("numeros: "))
var4 = min(var1,var2,var3)
var5 = max(var1,var2,var3)
var6 = int(var4-var5)
print(var4)
print(var6)
print(var5)
				 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1 = input(int("numeros: "))
ValueError: invalid literal for int() with base 10: 'numeros: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:59:07) 
-- CODE:
var1 = input("numeros: ")
var2 = input("numeros: ")
var3 = input("numeros: ")
var4 = min(var1,var2,var3)
var5 = max(var1,var2,var3)
var6 = (var1 + var2 + var3) - (var5 - var4)
print(var4)
print(var6)
print(var5)
				 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var6 = (var1 + var2 + var3) - (var5 - var4)
TypeError: unsupported operand type(s) for -: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:02:21) 
-- CODE:
var1 = input("numeros: ")
var2 = input("numeros: ")
var3 = input("numeros: ")
var4 = min(var1,var2,var3)
var5 = max(var1,var2,var3)
var6 = var1+var2+var3
var7 = var6 -(var5+var4)
print(var4)
print(var6)
print(var5)
				 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    var7 = var6 -(var5+var4)
TypeError: unsupported operand type(s) for -: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:02:44) 
-- CODE:
var1 = input("numeros: ")
var2 = input("numeros: ")
var3 = input("numeros: ")
var4 = min(var1,var2,var3)
var5 = max(var1,var2,var3)
var6 = (var1+var2+var3)
var7 = var6 -(var5+var4)
print(var4)
print(var6)
print(var5)
				 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    var7 = var6 -(var5+var4)
TypeError: unsupported operand type(s) for -: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:03:13) 
-- CODE:
var1 = input("numeros: ")
var2 = input("numeros: ")
var3 = input("numeros: ")
var4 = min(var1,var2,var3)
var5 = max(var1,var2,var3)
var6 = (var1+var2+var3)
var7 = var6 -(var5+var4)
print(var4)
print(var7)
print(var5)
				 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    var7 = var6 -(var5+var4)
TypeError: unsupported operand type(s) for -: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:05:47) 
-- CODE:
var1 = input("numeros: ")
var2 = input("numeros: ")
var3 = input("numeros: ")
x = min(var1,var2,var3)
y = max(var1,var2,var3)
z = (x+y)
print(x)
print(var1+var2+var3-z)
print(y)
				 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(var1+var2+var3-z)
TypeError: unsupported operand type(s) for -: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:06:52) 
-- CODE:
var1 = int(input("numeros: "))
var2 = int(input("numeros: "))
var3 = int(input("numeros: "))
x = min(var1,var2,var3)
y=max(var1,var2,var3)
z=(x+y)
print(x)
print(var1+var2+var3-z)
print(y)
				 
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:07:02) 
-- CODE:
var1 = int(input("numeros: "))
var2 = int(input("numeros: "))
var3 = int(input("numeros: "))
x = min(var1,var2,var3)
y=max(var1,var2,var3)
z=(x+y)
print(x)
print(var1+var2+var3-z)
print(y)
				 
-- EXECUTION TIME:
0.137719
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
